[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/Nuage_jump_2.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Nuage_jump_1.png" type="Texture" id=2]
[ext_resource path="res://anim_jump.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "anim_jump",
"speed": 2.0
} ]

[node name="anim_jump" type="Area2D"]
position = Vector2( 143, 99 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -15.5 )
scale = Vector2( 4.09375, 3.32812 )
frames = SubResource( 1 )
animation = "anim_jump"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.49999, -19 )
scale = Vector2( 3.85, 2.9 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
